--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>drumBit</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <div class="main">
-        <h1 class="heading">Music Time</h1>
-        <div class="drumButtons">
-            <button class="w drumbtn">W</button>
-            <button class="a drumbtn">A</button>
-            <button class="s drumbtn">S</button>
-            <button class="d drumbtn">D</button>
-            <button class="j drumbtn">J</button>
-            <button class="k drumbtn">K</button>
-            <button class="l drumbtn">L</button>
-        </div>
+      <h1 class="">Music Time</h1>
+      <div class="drumButtons">
+        <button class="w drumbtn">w</button>
+        <button class="a drumbtn">a</button>
+        <button class="s drumbtn">s</button>
+        <button class="d drumbtn">d</button>
+        <button class="j drumbtn">j</button>
+        <button class="k drumbtn">k</button>
+        <button class="l drumbtn">l</button>
+      </div>
     </div>
 
-   <script src="index.js"></script> 
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
